syntax = "proto3";

package pb;

option go_package = "./user/pkg/pb/";

service UserService {
  rpc Auth(AuthRequest) returns (AuthResponse) {}
  rpc SignUp(SignUpRequest) returns (SignUpResponse) {}
  rpc Get(GetUserRequest) returns (GetUserResponse) {}
  rpc Validate(ValidateRequest) returns (ValidateResponse) {}
}

message GetUserRequest {
  string id_token = 1;
}

message GetUserResponse {
  int64 status = 1;
  string error = 2;
  string id = 4;
  string gmail = 5;
  string username = 6;
  string nickname = 7;
  bool is_registered = 8;
  string role = 9;
}

message AuthRequest {
  string id_token = 1;
}

message AuthResponse {
  int64 status = 1;
  string error = 2;
  string jwt = 4;
  bool is_registered = 5;
}

message SignUpRequest {
  string username = 1;
  string nickname = 2;
  string jwt = 3;
  string role = 4;
}

message SignUpResponse {
  int64 status = 1;
  string error = 2;
  string jwt = 3;
  string id = 4;
  string gmail = 5;
  string username = 6;
  string nickname = 7;
  bool is_registered = 8;
  string role = 9;
}

message ValidateRequest {string jwt = 1;}

message ValidateResponse {
  int64 status = 1;
  string error = 2;
  string user_id = 3;
  string role = 4;
}

